--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,12 @@ input, button {
 #itemsList {
   list-style-type: none;
   padding: 0;
+  margin: 0;
+}
+
+#itemsList.with-border {
+  border: 1px solid black;
+  border-radius: 4px;
 }
 
 #itemsList li {
